# pythonProjectAPIpractice

./: .gitignore  README.md  main.py  pyproject.toml
src/: config.py  utils.py
